Created templates for Header & Footer, Login page & Regitration page (HTML, CSS, JS)

--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Server Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Server is Running!</h1>
-    <p>If you see this message, your server is functioning correctly.</p>
+    <main>
+        <div id="header"></div> <!-- Header placeholder -->
+
+        <h1>Server is Running!</h1>
+        <p>If you see this message, your server is functioning correctly.</p>
+        <div id="footer"></div> <!-- Footer placeholder -->
+        <script src="/js/loadTemplates.js"></script> <!-- Script to load templates -->
+    </main>
 </body>
 </html>
