--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
-<body>
+<body>s
     <div id="header"></div> <!-- Header placeholder -->
     <main>
         <div class="auth-container">
